--- a/res/xml/bootleg_external_smart_pixels.xml
+++ b/res/xml/bootleg_external_smart_pixels.xml
@@ -25,6 +25,15 @@
         android:summary="@string/smart_pixels_enable_summary"
         android:defaultValue="false" />
 
+    <com.bootleggers.dumpster.preferences.SystemSettingListPreference
+        android:key="smart_pixels_pattern"
+        android:entries="@array/smart_pixels_percent_strings"
+        android:entryValues="@array/smart_pixels_percent_values"
+        android:defaultValue="3"
+        android:dependency="smart_pixels_enable"
+        android:title="@string/smart_pixels_percent"
+        android:dialogTitle="@string/smart_pixels_percent" />
+
     <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="smart_pixels_on_power_save"
         android:title="@string/smart_pixels_on_power_save_title"
@@ -36,15 +45,22 @@
         android:entries="@array/smart_pixels_percent_strings"
         android:entryValues="@array/smart_pixels_percent_values"
         android:defaultValue="3"
+        android:dependency="smart_pixels_enable"
         android:title="@string/smart_pixels_percent"
         android:dialogTitle="@string/smart_pixels_percent" />
 
-    <com.bootleggers.dumpster.preferences.SystemSettingListPreference
-        android:key="smart_pixels_shift_timeout"
-        android:entries="@array/smart_pixels_shift_times"
-        android:entryValues="@array/smart_pixels_shift_values"
-        android:defaultValue="5"
-        android:title="@string/smart_pixels_shift"
-        android:dialogTitle="@string/smart_pixels_shift" />
+    <PreferenceCategory
+        android:title="@string/lockscreen_items_other">
+
+        <com.bootleggers.dumpster.preferences.SystemSettingListPreference
+            android:key="smart_pixels_shift_timeout"
+            android:entries="@array/smart_pixels_shift_times"
+            android:entryValues="@array/smart_pixels_shift_values"
+            android:defaultValue="5"
+            android:title="@string/smart_pixels_shift_title"
+            android:summary="@string/smart_pixels_shift_summary"
+            android:dialogTitle="@string/smart_pixels_shift_title" />
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
