Update Smart Pixels menu
Menu updates preferences when changed externally via tile
Now allows user to enable/disable auto-enable.

*DU Edits*
- Removed the check for the bool to enable smart pixel for the AOSP
way which is using a preference controller (see Settings)

- Added footer warning

- Changed some strings up and added summary to burn-in preference

Change-Id: Iaf78a60e5f083fde3c6fe562623169c01ba2ea22

--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -1028,6 +1028,9 @@
     <string name="smart_pixels_on_power_save_title">Auto-enable on battery saver</string>
     <string name="smart_pixels_on_power_save_summary">Enable Smart Pixels when battery saver is enabled</string>
     <string name="smart_pixels_percent">Percent of pixels to disable</string>
-    <string name="smart_pixels_shift">Prevent burn-in by shifting pixels every</string>
+    <string name="smart_pixels_shift_title">Burn-in protection</string>
+    <string name="smart_pixels_shift_summary">Prevents burn-in on OLED devices by shifting pixels every so often</string>
+    <string name="lockscreen_items_other">Other</string>
+    <string name="smart_pixels_warning_text">Smart pixels is a power saving feature. Depending on how many pixels you decide to turn off, you could see a significant improvement in battery life. For a good user experience, we recommend you set the amount of disabled pixels at 75 percent.</string>
 
 </resources>
