--- a/res/xml/bootleg_dumpster_lockscreen.xml
+++ b/res/xml/bootleg_dumpster_lockscreen.xml
@@ -50,6 +50,24 @@
         android:summary="@string/lock_clock_font_summary"
         android:persistent="false" />
 
+    <com.bootleggers.dumpster.preferences.CustomSeekBarPreference
+        android:key="lockscreen_security_alpha"
+        android:title="@string/lockscreen_security_alpha"
+        android:max="100"
+        settings:min="0"
+        settings:interval="1"
+        settings:units=""
+        android:persistent="false" />
+
+    <com.bootleggers.dumpster.preferences.CustomSeekBarPreference
+        android:key="lockscreen_alpha"
+        android:title="@string/lockscreen_alpha"
+        android:max="100"
+        settings:min="0"
+        settings:interval="1"
+        settings:units="%"
+        android:persistent="false" />
+
     <Preference
             android:title="@string/lockscreen_tuner_title"
             android:summary="@string/lockscreen_tuner_summary" >
