Keyguard & Bouncer Alpha [2/2]
Forward Port from RR Nougat.

Android Oreo bringup made by @SuperDroidBond

--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -805,4 +805,8 @@
     <string name="carbon_gesture_customapp">Launch application</string>
     <string name="carbon_gesture_launch">Launch</string>
 
+    <!-- Keyguardalpha -->
+    <string name="lockscreen_alpha">Lockscreen alpha</string>
+    <string name="lockscreen_security_alpha">Lockscreen bouncer alpha</string>
+
 </resources>
