dumpster: Add AICP Log It
This wonderful tool made by AICP helps people to know how to make the respective logs when something is wrong. Also, with the chance of making it a zip or send it to hastebin.

bootleggers edit: Add a message to explain new people what's the logs, and hope they know what have to send.

--- a/res/values/bootleg_arrays.xml
+++ b/res/values/bootleg_arrays.xml
@@ -549,4 +549,15 @@
         <item>1001</item>
     </string-array>
 
+    <!-- Log it -->
+    <string-array name="log_it_share_type_entries" translatable="false">
+        <item>@string/log_it_share_type_zip</item>
+        <item>@string/log_it_share_type_haste</item>
+    </string-array>
+
+    <string-array name="log_it_share_type_values" translatable="false">
+        <item>1</item>
+        <item>0</item>
+    </string-array>
+
  </resources>
