--- a/res/xml/bootleg_dumpster_misc.xml
+++ b/res/xml/bootleg_dumpster_misc.xml
@@ -65,6 +65,13 @@
         android:summary="@string/screen_state_toggles_summary_opt"
         android:fragment="com.bootleggers.dumpster.external.SuspendActions" />
 
+
+     <Preference
+         android:title="@string/log_it_title"
+         android:key="logit_section"
+         android:summary="@string/log_it_summary"
+         android:fragment="com.bootleggers.dumpster.external.LogIt" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
