--- a/res/xml/bootleg_dumpster_lockscreen.xml
+++ b/res/xml/bootleg_dumpster_lockscreen.xml
@@ -59,6 +59,15 @@
         android:summary="@string/lock_date_font_summary"
         android:persistent="false" />
 
+    <ListPreference
+        android:key="lock_owner_fonts"
+        android:title="@string/lock_owner_font_title"
+        android:dialogTitle="@string/lock_owner_font_dialog_title"
+        android:entries="@array/lock_date_fonts_entries"
+        android:entryValues="@array/lock_date_fonts_values"
+        android:summary="@string/lock_owner_font_summary"
+        android:persistent="false" />
+
     <com.bootleggers.dumpster.preferences.CustomSeekBarPreference
         android:key="lockscreen_security_alpha"
         android:title="@string/lockscreen_security_alpha"
