Running services icon toggle [2/2]
Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>
Change-Id: Id700ad1ec8b20d048b5faf0cd08749044e2d7c34

--- a/res/xml/bootleg_dumpster_quicksettings.xml
+++ b/res/xml/bootleg_dumpster_quicksettings.xml
@@ -46,6 +46,12 @@
         android:dependency="qs_show_brightness"
         android:defaultValue="true"/>
 
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="qs_running_services_toggle"
+        android:title="@string/qs_running_services_title"
+        android:summary="@string/qs_running_services_summary"
+        android:defaultValue="false" />
+
     </PreferenceCategory>
 
 
