--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -878,4 +878,8 @@
     <string name="lock_owner_font_summary">Change the default font of the lockscreen owner info</string>
     <string name="lock_owner_font_dialog_title">Select lock owner font</string>
 
+    <!-- Running Services -->
+    <string name="qs_running_services_title">Running Services Icon</string>
+    <string name="qs_running_services_summary">Disable the tile running services icon in the footer</string>
+
 </resources>
