--- a/res/xml/bootleg_dumpster_lockscreen.xml
+++ b/res/xml/bootleg_dumpster_lockscreen.xml
@@ -41,50 +41,11 @@
         android:summary="@string/lockscreen_battery_info_summary" 
         android:defaultValue="true" />
 
-    <ListPreference
-        android:key="lock_clock_fonts"
-        android:title="@string/lock_clock_font_title"
-        android:dialogTitle="@string/lock_clock_font_dialog_title"
-        android:entries="@array/lock_clock_fonts_entries"
-        android:entryValues="@array/lock_clock_fonts_values"
-        android:summary="@string/lock_clock_font_summary"
-        android:persistent="false" />
-
-    <ListPreference
-        android:key="lock_date_fonts"
-        android:title="@string/lock_date_font_title"
-        android:dialogTitle="@string/lock_date_font_dialog_title"
-        android:entries="@array/lock_date_fonts_entries"
-        android:entryValues="@array/lock_date_fonts_values"
-        android:summary="@string/lock_date_font_summary"
-        android:persistent="false" />
-
-    <ListPreference
-        android:key="lock_owner_fonts"
-        android:title="@string/lock_owner_font_title"
-        android:dialogTitle="@string/lock_owner_font_dialog_title"
-        android:entries="@array/lock_date_fonts_entries"
-        android:entryValues="@array/lock_date_fonts_values"
-        android:summary="@string/lock_owner_font_summary"
-        android:persistent="false" />
-
-    <com.bootleggers.dumpster.preferences.CustomSeekBarPreference
-        android:key="lockscreen_security_alpha"
-        android:title="@string/lockscreen_security_alpha"
-        android:max="100"
-        settings:min="0"
-        settings:interval="1"
-        settings:units=""
-        android:persistent="false" />
-
-    <com.bootleggers.dumpster.preferences.CustomSeekBarPreference
-        android:key="lockscreen_alpha"
-        android:title="@string/lockscreen_alpha"
-        android:max="100"
-        settings:min="0"
-        settings:interval="1"
-        settings:units="%"
-        android:persistent="false" />
+     <Preference
+        android:key="lockscreen_moreui"
+        android:fragment="com.bootleggers.dumpster.external.LockscreenUI"
+        android:title="@string/lockscreen_moreui_title"
+        android:summary="@string/lockscreen_moreui_summary" />
 
     <Preference
             android:title="@string/lockscreen_tuner_title"
