--- a/res/xml/bootleg_dumpster_recents.xml
+++ b/res/xml/bootleg_dumpster_recents.xml
@@ -50,14 +50,14 @@
          android:summary="@string/recents_show_membar_summary"
          android:defaultValue="false" />
 
-     <PreferenceScreen
+     <Preference
         android:key="hide_app_from_recents"
         android:title="@string/hide_apps_from_recents_title"
         android:summary="@string/hide_apps_from_recents_summary" >
              <intent android:action="android.intent.action.MAIN"
                  android:targetPackage="com.android.settings"
                  android:targetClass="com.bootleggers.dumpster.external.HAFRAppListActivity" />
-     </PreferenceScreen>
+     </Preference>
 
     <Preference
         android:key="recents_icon_pack"
