--- a/res/xml/bootleg_dumpster_statusbar.xml
+++ b/res/xml/bootleg_dumpster_statusbar.xml
@@ -129,6 +129,12 @@
         android:summary="@string/double_tap_sleep_gesture_summary"
         android:defaultValue="true" />
 
+     <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+            android:key="wallpaper_notification_shade_wallpaper_tint"
+            android:title="@string/wallpaper_tint_notification_shade"
+            android:summary="@string/wallpaper_tint_summary"
+            android:defaultValue="true" />
+
     </PreferenceCategory>
 
 
