--- a/res/xml/bootleg_dumpster_power.xml
+++ b/res/xml/bootleg_dumpster_power.xml
@@ -78,6 +78,12 @@
             android:title="@string/powermenu_soundpanel"
             android:defaultValue="false" /> -->
 
+         <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+            android:key="wallpaper_power_menu_tint"
+            android:title="@string/wallpaper_tint_power_menu"
+            android:summary="@string/wallpaper_tint_summary"
+            android:defaultValue="true" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
