--- a/res/xml/bootleg_external_lockscreenui.xml
+++ b/res/xml/bootleg_external_lockscreenui.xml
@@ -120,6 +120,12 @@
         settings:units=""
         android:persistent="false" />
 
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="wallpaper_keyguard_wallpaper_tint"
+        android:title="@string/wallpaper_tint_keyguard"
+        android:summary="@string/wallpaper_tint_summary"
+        android:defaultValue="true" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
