--- a/res/xml/bootleg_dumpster_power.xml
+++ b/res/xml/bootleg_dumpster_power.xml
@@ -80,4 +80,16 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:key="powermenu_custom_misc"
+        android:title="@string/misc_title">
+
+         <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+            android:key="wallpaper_power_menu_tint"
+            android:title="@string/wallpaper_tint_power_menu"
+            android:summary="@string/wallpaper_tint_summary"
+            android:defaultValue="true" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
