Allow to disable the Wallpaper tint [2/2]
Instead of creating a new section for this, the options that correspond
to each section have been placed in those sections.

Change-Id: I38b71fb8b70d57436a82e8eacbac4013b763b2c9

--- a/res/xml/bootleg_dumpster_notifications.xml
+++ b/res/xml/bootleg_dumpster_notifications.xml
@@ -92,4 +92,10 @@
 
     </PreferenceCategory>
 
+     <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+            android:key="wallpaper_notification_shade_wallpaper_tint"
+            android:title="@string/wallpaper_tint_notification_shade"
+            android:summary="@string/wallpaper_tint_summary"
+            android:defaultValue="true" />
+
 </PreferenceScreen>
