Add toggle to enable Android P system animation [2/2]
Change-Id: I9c2ae237550455df28eed426d46c189e448d7411
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/xml/bootleg_dumpster_misc.xml
+++ b/res/xml/bootleg_dumpster_misc.xml
@@ -98,6 +98,12 @@
         android:entryValues="@array/listview_interpolator_values"
         android:defaultValue="0" />
 
+    <com.bootleggers.dumpster.preferences.GlobalSettingSwitchPreference
+        android:key="system_default_animation"
+        android:title="@string/system_default_animation_title"
+        android:summary="@string/system_default_animation_summary"
+        android:defaultValue="false" />
+
     <Preference
         android:key="gesture_anywhere"
         android:title="@string/gesture_anywhere_title"
