Add toggle to enable Android P system animation [2/2]
Change-Id: I9c2ae237550455df28eed426d46c189e448d7411
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -1095,4 +1095,8 @@
     <string name="status_bar_notif_count_title">Show notification count</string>
     <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
 
+    <!-- P animations -->
+    <string name="system_default_animation_title">Android P animation style</string>
+    <string name="system_default_animation_summary">Enable Android P \"Default\" animations</string>
+
 </resources>
