Add toggle to enable Android P system animation [2/2]
Change-Id: I9c2ae237550455df28eed426d46c189e448d7411
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/xml/bootleg_dumpster_animations.xml
+++ b/res/xml/bootleg_dumpster_animations.xml
@@ -53,4 +53,16 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="@string/animations_misc_animations"
+        android:key="anim_miscstuff">
+
+    <com.bootleggers.dumpster.preferences.GlobalSettingSwitchPreference
+        android:key="system_default_animation"
+        android:title="@string/system_default_animation_title"
+        android:summary="@string/system_default_animation_summary"
+        android:defaultValue="false" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
