Add kill button to notification guts [2/2]
Change-Id: I578e5928373c006344dfc6e9e7fa107ae19bd235

--- a/res/xml/bootleg_dumpster_statusbar.xml
+++ b/res/xml/bootleg_dumpster_statusbar.xml
@@ -135,6 +135,12 @@
             android:summary="@string/wallpaper_tint_summary"
             android:defaultValue="true" />
 
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="notification_guts_kill_app_button"
+        android:title="@string/notification_guts_kill_app_button_title"
+        android:summary="@string/notification_guts_kill_app_button_summary"
+        android:defaultValue="false" />
+
     </PreferenceCategory>
 
 
