--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -1106,4 +1106,8 @@
     <string name="wallpaper_tint_notification_shade">Notification shade tint</string>
     <string name="wallpaper_tint_summary">Apply a tint to the background based on the homescreen wallpaper</string>
 
+    <!-- Notification guts kill app button -->
+    <string name="notification_guts_kill_app_button_title">Kill app button</string>
+    <string name="notification_guts_kill_app_button_summary">Show a kill app button in the notification\'s longpress menu</string>
+
 </resources>
